Update ServerCertificate.java